# chunky_monkey

./: .gitignore  LICENSE  directory.txt  llm_commands.txt  project_export.sh  project_export.txt  project_structure.txt  pyproject.toml  readme.md  setup.py
src/document_processor/: __init__.py
src/document_processor/cli/: commands.py
src/document_processor/core/: __init__.py  errors.py  models.py  processor.py  tokenizer.py  verifier.py
src/document_processor/services/: __init__.py  chunk_service.py  document_service.py  metadata_service.py
src/document_processor/utils/: __init__.py  config.py  logging.py
